wp-content/themes/academyAfrica/assets/css/src/widgets/error.scss
$small-screen: 768px;
$large-screen: 1024px;

@mixin respond-to($breakpoint) {
  @media only screen and (max-width: $breakpoint) {
    @content;
  }
}

.spacer {
  margin-top: 100px;
  // height: 100px;
}
.error {
  display: flex;
  justify-content: space-around;
  background-image: url("/wp-content/themes/academyAfrica/assets/images/error.png");
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center;
  min-height: 700px;
  width: 100vw;

  @include respond-to($small-screen) {
    background-size: cover;
  }
  .content {
    max-width: 768px;
    flex: 2;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    // padding: 140px 0 0;

    .code {
      color: var(--shades-white, #fff);
      text-align: center;
      /* Heading/H1/Bold */
      font-size: 48px;
      font-style: normal;
      margin: 0;
      font-weight: 700;
      line-height: 56px; /* 116.667% */
    }
    .text {
      color: var(--shades-white, #fff);
      text-align: center;
      margin: 0;
      /* Heading/H3/Bold */
      font-size: 33px;
      font-style: normal;
      font-weight: 700;
      line-height: 40px; /* 121.212% */
    }
    .description {
      color: var(--shades-black, #000);
      text-align: center;
      max-width: 300px;
      margin: 140px 0 42px;
      /* Paragraph/P3/Regular */
      font-family: Hind;
      font-size: 18px;
      font-style: normal;
      font-weight: 400;
      line-height: 21.6px; /* 120% */
    }
    .actions {
      display: flex;
      justify-content: space-around;
      margin-bottom: 42px;
      .button {
        color: var(--primary-50, #eff0fd);

        /* Buttons */
        font-family: Open Sans;
        font-size: 16px;
        font-style: normal;
        font-weight: 800;
        line-height: 19px; /* 118.75% */
        letter-spacing: 1.6px;
        text-transform: uppercase;
        padding: 12px 16px;
        justify-content: center;
        align-items: center;
        margin-right: 33px;
        background: var(--primary-700, #0c1a81);
        text-decoration: none;
      }
    }
  }
}

